--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
-	integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
-	crossorigin="anonymous" 
-	referrerpolicy="no-referrer">
+<script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container">
@@ -32,5 +29,16 @@
                 <div class="button"> Explorer nos restaurants</div>
             </nav>
         </header>
+        <section class="fonctionnement">
+            <h1 class="title">
+                Fonctionnement
+            </h1>
+
+            <div class="choice">
+                <div></div>
+                Choisissez un restaurant</div>
+            <div class="menu">Composez votre menu</div>
+            <div class="degustez">Dégustez au restaurant</div>
+        </section>
     </div>
     </body>
