--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Oh my food</title>
-	<link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
 	<script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./style.css">
 </head>
@@ -72,6 +75,17 @@
 			</div>
 		</section>
 	</div>
+	<footer>
+		<div class="logo-footer"> Oh my food </div>
+		<div class="text-footer1">
+			<p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+			<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+		</div>
+		<div class="text-footer2">
+			<p>Mention légales</p>
+			<p> Contact</p>
+		</div>
+	</footer>
 </body>
 
 </html>
