--- a/PDG.html
+++ b/PDG.html
@@ -7,9 +7,12 @@
 		<title>Oh my food</title>
         <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">	
         <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./style2.css">
 	</head>
 	<body>
 		<div class="container">
 			<header>
 				<div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
+				<div class="size-img">
+					<img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+				</div>
