ajout des boutons superposés

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Oh my food</title>
+	<title>Ohmyfood</title>
 	<link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
 	<script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -32,14 +32,30 @@
 		</header>
 		<section class="fonctionnement">
 			<h1 class="title">Fonctionnement </h1>
-			<div class="number">1</div>
-			<div class="choice">
-				<i class="fa-solid fa-mobile-screen-button icon-flex"></i> Choisissez un restaurant
-			</div>
-			<div class="number">2</div>
-			<div class="menu"> <i class="fa-solid fa-list-ul icon-flex"></i> Composez votre menu</div>
-			<div class="number">3</div>
-			<div class="degustez"><i class="fa-solid fa-store icon-flex"></i>Dégustez au restaurant</div>
+
+
+			<div class="button-funct">
+				<div class="number-container"> 
+					<div class="number">1</div>
+				</div>
+				<i class="fa-solid fa-mobile-screen-button icon-flex"></i> Choisissez un restaurant</div>
+				</div>
+
+
+			<div class="button-funct"> 
+				<div class="number-container"> 
+					<div class="number">2</div>
+				</div>
+				<i class="fa-solid fa-list-ul icon-flex"></i> Composez votre menu</div>
+
+
+			<div class="button-funct">
+				<div class="number-container"> 
+					<div class="number">3</div>
+				</div>
+				<i class="fa-solid fa-store icon-flex"></i>Dégustez au restaurant</div>
+
+
 		</section>
 		<section>
 			<div class="restaurants">
@@ -76,7 +92,7 @@
 		</section>
 	</div>
 	<footer>
-		<div class="logo-footer"> Oh my food </div>
+		<div class="logo-footer"> ohmyfood </div>
 		<div class="text-footer1">
 			<p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
 			<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
