--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 				</div>
 				<div class="restau-card"><img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
 					<div class="restau">
-						<h3>La palette du goût</h3>
-						<p>A la française</p>
+						<h3> A la Française</h3>
+						<p>Cité Rouge</p>
 					</div>
 				</div>
 				<div class="restau-card"><img class="size-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
