--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -4,15 +4,98 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Oh my food</title>
-        <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">	
-        <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="./style2.css">
+		<title>Ohmyfood</title>
+		<link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
+		<script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="./css/style2.css">
 	</head>
 	<body>
 		<div class="container">
 			<header>
-				<div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
+				<div class="bloc-logo"> <img src="images/logo/ohmyfood@2x.svg" alt=""></div> 
 				<div class="size-img">
 					<img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
 				</div>
+			</header>
+<main>
+
+	<section class="menu"> 
+		<div class="flex">
+			 <h2 class="title-restau"> A la française</h2> 
+			<i class="fa-regular fa-heart fa-xl"></i>
+		</div>
+
+		<div class="entr">
+			<p class="upper">
+				Entrées
+			</p>
+			<div class="borderb"></div>
+			<div class="food-item">
+
+			</div>
+
+			<div class="food-item">
+
+			</div>
+
+			<div class="food-item">
+
+			</div>
+
+			<p class="upper">
+				PLATS
+			</p>
+			<div class="food-item">
+
+			</div>
+
+			<div class="food-item">
+
+			</div>
+
+			<div class="food-item">
+
+			</div>
+
+			<p class="upper">
+				DESSERTS
+			</p>
+
+			<div class="food-item">
+
+			</div>
+
+			<div class="food-item">
+
+			</div>
+
+			<div class="food-item">
+
+			</div>
+
+
+
+
+			
+		</div>
+
+
+		<div class="button">Commander</div>
+
+
+	</section>
+</main>
+<footer>
+	<div class="logo-footer"> ohmyfood </div>
+	<div class="text-footer1">
+		<p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+		<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+	</div>
+	<div class="text-footer2">
+		<p>Mention légales</p>
+		<p> Contact</p>
+	</div>
+</footer>
