--- a/palette.html
+++ b/palette.html
@@ -15,7 +15,11 @@
 	<body>
 		<div class="container">
 			<header>
-				<div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
+				<div class="bloc-logo"> 
+					<div class="icon-back">
+					<i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i></div>
+					
+					<img class="logo" src="images/logo/ohmyfood@2x.svg" alt=""></div>
 				<div class="size-img">
 					<img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
 				</div>
@@ -25,7 +29,7 @@
 	<section class="menu"> 
 		<div class="flex">
 			 <h2 class="title-restau"> La palette du goût</h2> 
-			<i class="fa-regular fa-heart fa-xl"></i>
+			<i class="fa-regular fa-heart fa-xl fa-xl2"></i>
 		</div>
 
 		<div class="entr">
