indentation + avancement menu

--- a/index.html
+++ b/index.html
@@ -2,106 +2,109 @@
 <html lang="fr">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ohmyfood</title>
-	<link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
-	<script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ohmyfood</title>
+    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
+    <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-	<div class="container">
-		<header>
-			<div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
-			<div class="bloc-city"><i class="fa-solid fa-location-dot icon-loc"></i>
-				<p class="size-city">Paris, Belleville</p>
-			</div>
-			<nav>
-				<div class="reserve">
-					<h1>Réservez le menu qui vous convient </h1>
-				</div>
-				<div class="discover">
-					<p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-				</div>
-				<div class="button">Explorer nos restaurants</div>
-			</nav>
-		</header>
-		<section class="fonctionnement">
-			<h1 class="title">Fonctionnement </h1>
+    <div class="container">
+        <header>
+            <div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
+            <div class="bloc-city"><i class="fa-solid fa-location-dot icon-loc"></i>
+                <p class="size-city">Paris, Belleville</p>
+            </div>
+            <nav>
+                <div class="reserve">
+                    <h1>Réservez le menu qui vous convient </h1>
+                </div>
+                <div class="discover">
+                    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                </div>
+                <div class="button">Explorer nos restaurants</div>
+            </nav>
+        </header>
+        <section class="fonctionnement">
+            <h1 class="title">Fonctionnement </h1>
 
 
-			<div class="button-funct">
-				<div class="number-container"> 
-					<div class="number">1</div>
-				</div>
-				<i class="fa-solid fa-mobile-screen-button icon-flex"></i> Choisissez un restaurant</div>
-				</div>
+            <div class="button-funct">
+                <div class="number-container">
+                    <div class="number">1</div>
+                </div>
+                <i class="fa-solid fa-mobile-screen-button icon-flex"></i> Choisissez un restaurant
+            </div>
+    </div>
 
 
-			<div class="button-funct"> 
-				<div class="number-container"> 
-					<div class="number">2</div>
-				</div>
-				<i class="fa-solid fa-list-ul icon-flex"></i> Composez votre menu</div>
+    <div class="button-funct">
+        <div class="number-container">
+            <div class="number">2</div>
+        </div>
+        <i class="fa-solid fa-list-ul icon-flex"></i> Composez votre menu
+    </div>
 
 
-			<div class="button-funct">
-				<div class="number-container"> 
-					<div class="number">3</div>
-				</div>
-				<i class="fa-solid fa-store icon-flex"></i>Dégustez au restaurant</div>
+    <div class="button-funct">
+        <div class="number-container">
+            <div class="number">3</div>
+        </div>
+        <i class="fa-solid fa-store icon-flex"></i>Dégustez au restaurant
+    </div>
 
 
-		</section>
-		<section>
-			<div class="restaurants">
-				<h1 class="title2">Restaurants</h1>
-				<div class="restau-card">
-					<div class="nouveau"> Nouveau</div>
-					<img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-					<div class="restau">
-						<h3>La palette du goût</h3>
-						<p>Ménilmontant</p>
-					</div>
-				</div>
-				<div class="restau-card">
-					<div class="nouveau"> Nouveau</div>
-					<img class="size-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-					<div class="restau">
-						<h3>La note enchantée</h3>
-						<p>Charonne</p>
-					</div>
-				</div>
-				<div class="restau-card"><img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-					<div class="restau">
-						<h3> A la Française</h3>
-						<p>Cité Rouge</p>
-					</div>
-				</div>
-				<div class="restau-card"><img class="size-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-					<div class="restau">
-						<h3>Le délice des sens</h3>
-						<p>Ménilmontant</p>
-					</div>
-				</div>
-			</div>
-		</section>
-	</div>
-	<footer>
-		<div class="logo-footer"> ohmyfood </div>
-		<div class="text-footer1">
-			<p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
-			<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
-		</div>
-		<div class="text-footer2">
-			<p>Mention légales</p>
-			<p> Contact</p>
-		</div>
-	</footer>
+    </section>
+    <section>
+        <div class="restaurants">
+            <h1 class="title2">Restaurants</h1>
+            <div class="restau-card">
+                <div class="nouveau"> Nouveau</div>
+                <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="restau">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+            </div>
+            <div class="restau-card">
+                <div class="nouveau"> Nouveau</div>
+                <img class="size-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                <div class="restau">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                </div>
+            </div>
+            <div class="restau-card"><img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                <div class="restau">
+                    <h3> A la Française</h3>
+                    <p>Cité Rouge</p>
+                </div>
+            </div>
+            <div class="restau-card"><img class="size-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                <div class="restau">
+                    <h3>Le délice des sens</h3>
+                    <p>Ménilmontant</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    </div>
+    <footer>
+        <div class="logo-footer"> ohmyfood </div>
+        <div class="text-footer1">
+            <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+            <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+        </div>
+        <div class="text-footer2">
+            <p>Mention légales</p>
+            <p> Contact</p>
+        </div>
+    </footer>
 </body>
 
 </html>
