--- a/palette.html
+++ b/palette.html
@@ -1,105 +1,122 @@
 <!DOCTYPE html>
-	<html lang="fr">
+<html lang="fr">
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Ohmyfood</title>
-		<link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
-		<script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="./css/style2.css">
-	</head>
-	<body>
-		<div class="container">
-			<header>
-				<div class="bloc-logo"> 
-					<div class="icon-back">
-					<i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i></div>
-					
-					<img class="logo" src="images/logo/ohmyfood@2x.svg" alt=""></div>
-				<div class="size-img">
-					<img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-				</div>
-			</header>
-<main>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ohmyfood</title>
+    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
+    <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style2.css">
+</head>
 
-	<section class="menu"> 
-		<div class="flex">
-			 <h2 class="title-restau"> La palette du goût</h2> 
-			<i class="fa-regular fa-heart fa-xl fa-xl2"></i>
-		</div>
+<body>
+    <div class="container">
+        <header>
+            <div class="bloc-logo">
+                <div class="icon-back">
+                    <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i>
+                </div>
+                <img class="logo" src="images/logo/ohmyfood@2x.svg" alt="">
+                <div class="empty-div"></div>
+            </div>
+    </div>
+    <div class="size-img">
+        <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+    </div>
+    </header>
+    <main>
 
-		<div class="entr">
-			<p class="upper">
-				Entrées
-			</p>
-			<div class="borderb"></div>
-			<div class="food-item">
+        <section class="menu">
+            <div class="flex">
+                <h1 class="title-restau"> La palette du goût</h1>
+                <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+            </div>
 
-			</div>
+            <div class="entr">
+                <p class="upper">
+                    Entrées
+                </p>
+                <div class="borderb"></div>
+                <div class="food-item">
+                    <p class="marge1">Fricassée d'escargots</p>
+                    <p class="marge2">Au piment d'Espelette</p>
+                </div>
 
-			<div class="food-item">
+                <div class="food-item">
+                    <p class="marge1">Foie gras de canard mi-cuit</p>
+                    <p class="marge2">Et ses copeaux de truffe noire</p>
 
-			</div>
+                </div>
 
-			<div class="food-item">
+                <div class="food-item">
+                    <p class="marge1">Oeuf au plat</p>
+                    <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
 
-			</div>
+                </div>
 
-			<p class="upper">
-				PLATS
-			</p>
-			<div class="food-item">
+                <p class="upper">
+                    PLATS
+                </p>
+                <div class="food-item">
+                    <p class="marge1">Filete de boeuf aux herbes</p>
+                    <p class="marge2">Accompagné de sa ribambelle de légumes</p>
 
-			</div>
+                </div>
 
-			<div class="food-item">
+                <div class="food-item">
+                    <p class="marge1">Parmentier de queue de boeuf</p>
+                    <p class="marge2">A la truffe noire sur sa purée de panais</p>
 
-			</div>
+                </div>
 
-			<div class="food-item">
+                <div class="food-item">
 
-			</div>
+                    <p class="marge1">Filet de turbot</p>
+                    <p class="marge2">Aux agrumes/p>
 
-			<p class="upper">
-				DESSERTS
-			</p>
+                </div>
 
-			<div class="food-item">
+                <p class="upper">
+                    DESSERTS
+                </p>
 
-			</div>
+                <div class="food-item">
+                    <p class="marge1">Paris-Brest</p>
+                    <p class="marge2">Revisité</p>
 
-			<div class="food-item">
+                </div>
 
-			</div>
+                <div class="food-item">
+                    <p class="marge1">Macaron au chocolat d'exception</p>
+                    <p class="marge2">Et glace à la vanille de Madagascar</p>
 
-			<div class="food-item">
+                </div>
 
-			</div>
+                <div class="food-item">
+                    <p class="marge1">Mousse au chocolat</p>
+                    <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
+
+                </div>
+
+            </div>
+
+            <div class="button">Commander</div>
 
 
-
-
-			
-		</div>
-
-
-		<div class="button">Commander</div>
-
-
-	</section>
-</main>
-<footer>
-	<div class="logo-footer"> ohmyfood </div>
-	<div class="text-footer1">
-		<p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
-		<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
-	</div>
-	<div class="text-footer2">
-		<p>Mention légales</p>
-		<p> Contact</p>
-	</div>
-</footer>
+        </section>
+    </main>
+    <footer>
+        <div class="logo-footer"> ohmyfood </div>
+        <div class="text-footer1">
+            <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+            <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+        </div>
+        <div class="text-footer2">
+            <p>Mention légales</p>
+            <p> Contact</p>
+        </div>
+    </footer>
