--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="discover">
                     <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 </div>
-                <div class="button">Explorer nos restaurants</div>
+                <div class="button"> <a href="#restaurants-link">Explorer nos restaurants</a></div>
             </nav>
         </header>
         <section class="fonctionnement">
@@ -40,7 +40,6 @@
                 </div>
                 <i class="fa-solid fa-mobile-screen-button icon-flex"></i> Choisissez un restaurant
             </div>
-    </div>
 
 
     <div class="button-funct">
@@ -62,22 +61,24 @@
     </section>
     <section>
         <div class="restaurants">
-            <h1 class="title2">Restaurants</h1>
+            <h1 id="resturants-link" class="title2">Restaurants</h1>
             <div class="restau-card">
                 <div class="nouveau"> Nouveau</div>
                 <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                 <div class="restau">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
+                    <div>
                 </div>
+                <div class="nouveau"> Nouveau</div>
             </div>
             <div class="restau-card">
-                <div class="nouveau"> Nouveau</div>
                 <img class="size-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                 <div class="restau">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
                 </div>
+                <div class="nouveau"> Nouveau</div>
             </div>
             <div class="restau-card"><img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                 <div class="restau">
@@ -92,8 +93,8 @@
                 </div>
             </div>
         </div>
+        </div>
     </section>
-    </div>
     <footer>
         <div class="logo-footer"> ohmyfood </div>
         <div class="text-footer1">
@@ -105,6 +106,7 @@
             <p> Contact</p>
         </div>
     </footer>
+    </div>
 </body>
 
 </html>
