correction bug affichage nouveau

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 <div class="nouveau"> Nouveau</div>
                 <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                 <div class="restau">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                    <div>
+                  <div> <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p></div> 
+                    <i class="fa-regular fa-heart fa-xl heart-index"></i>
                 </div>
                 <div class="nouveau"> Nouveau</div>
             </div>
