font weight boutons 1,2,3

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="number-container">
                         <div class="number">1</div>
                     </div>
-                    <i class="fa-solid fa-mobile-screen-button icon-flex"></i> Choisissez un restaurant
+                    <i class="fa-solid fa-mobile-screen-button icon-flex"></i> <p> Choisissez un restaurant </p>
                 </div>
 
                 <!-- BOUTON 2 -->
@@ -53,7 +53,7 @@
                     <div class="number-container">
                         <div class="number">2</div>
                     </div>
-                    <i class="fa-solid fa-list-ul icon-flex"></i> Composez votre menu
+                    <i class="fa-solid fa-list-ul icon-flex"></i> <p> Composez votre menu </p>
                 </div>
 
                 <!-- BOUTON 3 -->
@@ -61,7 +61,7 @@
                     <div class="number-container">
                         <div class="number">3</div>
                     </div>
-                    <i class="fa-solid fa-store icon-flex"></i>Dégustez au restaurant
+                    <i class="fa-solid fa-store icon-flex"></i> <p> Dégustez au restaurant </p>
                 </div>
 
 
