--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -45,7 +43,8 @@
                     <div class="number-container">
                         <div class="number">1</div>
                     </div>
-                    <i class="fa-solid fa-mobile-screen-button icon-flex"></i> <p> Choisissez un restaurant </p>
+                    <i class="fa-solid fa-mobile-screen-button icon-flex"></i>
+                    <p> Choisissez un restaurant </p>
                 </div>
 
                 <!-- BOUTON 2 -->
@@ -53,7 +52,8 @@
                     <div class="number-container">
                         <div class="number">2</div>
                     </div>
-                    <i class="fa-solid fa-list-ul icon-flex"></i> <p> Composez votre menu </p>
+                    <i class="fa-solid fa-list-ul icon-flex"></i>
+                    <p> Composez votre menu </p>
                 </div>
 
                 <!-- BOUTON 3 -->
@@ -61,7 +61,8 @@
                     <div class="number-container">
                         <div class="number">3</div>
                     </div>
-                    <i class="fa-solid fa-store icon-flex"></i> <p> Dégustez au restaurant </p>
+                    <i class="fa-solid fa-store icon-flex"></i>
+                    <p> Dégustez au restaurant </p>
                 </div>
 
 
@@ -95,13 +96,14 @@
                         <div class="nouveau"> Nouveau</div>
                     </div>
                     <!-- A la Française -->
-                    <div class="restau-card"><img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                    <div class="restau-card">
+                        <img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         <div class="restau">
                             <div>
                                 <h3> À la Française</h3>
                                 <p>Cité Rouge</p>
                             </div>
-                            <i class="fa-regular fa-heart fa-xl heart-index"></i>
+                            <i class="fa-regular fa-heart fa-xl heart-index" tabindex="0"></i>
                         </div>
                     </div>
                     <!-- Le délice des sens -->
